# BTC-ISMIR19

./: README.md  audio_dataset.py  pyproject.toml  test.py  train.py  train_crf.py
src/btc_ismir19/: __init__.py  audio_dataset.py  baseline_models.py  btc_model.py  chord_recognizer.py  crf_model.py
src/btc_ismir19/utils/: __init__.py  chords.py  hparams.py  logger.py  mir_eval_modules.py  preprocess.py  pytorch_utils.py  tf_logger.py  transformer_modules.py  warnings_config.py
utils/: tf_logger.py  warnings_config.py
