[project]
name = "btc-ismir19"
version = "0.1.0"
description = "A Bi-Directional Transformer for Musical Chord Recognition (ISMIR19)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyrubberband>=0.3.0",
    "librosa>=0.10.0",
    "pyyaml>=6.0",
    "mir-eval>=0.7",
    "pretty-midi>=0.2.9",
    "tensorflow>=2.13.0",
    "scipy>=1.11.0",
    "sortedcontainers>=2.4.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hatchling 会自动发现 src/ 目录下的包，无需手动配置 only-include

[dependency-groups]
dev = []

